--- a/.github/workflows/api-governance.yml
+++ b/.github/workflows/api-governance.yml
@@ -29,42 +29,98 @@ jobs:
   governance:
     name: API Governance - Lint OpenAPI Spec
     runs-on: ubuntu-latest
+    if: ${{ !contains(github.event.head_commit.message, 'initial commit') }}
     
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
       
+      - name: Cache Insomnia CLI
+        id: cache-inso
+        uses: actions/cache@v4
+        with:
+          path: /tmp/inso
+          key: inso-12.1.0
+      
       - name: Setup Node.js
+        if: steps.cache-inso.outputs.cache-hit != 'true'
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: '18'
       
-      - name: Install Inso CLI
-        run: npm install -g insomnia-inso
+      - name: Install Insomnia CLI
+        if: steps.cache-inso.outputs.cache-hit != 'true'
+        run: |
+          mkdir -p /tmp/inso
+          curl -sL https://github.com/Kong/insomnia/releases/download/core%4012.1.0/inso-linux-x64-12.1.0.tar.xz -o inso.tar.xz
+          tar -xf inso.tar.xz -C /tmp/inso
+          chmod +x /tmp/inso/inso
       
       - name: Lint FHIR API Specification
         run: |
           echo "🔍 Running governance checks on FHIR API specification..."
-          inso lint spec .insomnia/fhir-api-openapi.yaml
-      
-      - name: Upload lint report
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: lint-report
-          path: |
-            .insomnia/
-            .spectral.yaml
-          retention-days: 30
-
-  test:
-    name: API Testing - Run Test Collection
-    runs-on: ubuntu-latest
-    needs: governance
+          chmod +x /tmp/inso/inso
+          export PATH="/tmp/inso:$PATH"
+    if: ${{ !contains(github.event.head_commit.message, 'initial commit') }}
     
     services:
       fhir-server:
         image: hapiproject/hapi:latest
+        ports:
+          - 8080:8080
+        env:
+          hapi.fhir.datasource.driver: org.h2.Driver
+          hapi.fhir.datasource.url: jdbc:h2:mem:testdb
+          hapi.fhir.datasource.username: sa
+          hapi.fhir.datasource.password: ""
+          hapi.fhir.fhir_version: R4
+          hapi.fhir.server_address: http://localhost:8080/fhir
+        options: >-
+          --health-cmd "exit 0"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 10
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Cache Insomnia CLI
+        id: cache-inso
+        uses: actions/cache@v4
+        with:
+          path: /tmp/inso
+          key: inso-12.1.0
+      
+      - name: Setup Node.js
+        if: steps.cache-inso.outputs.cache-hit != 'true'
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+      
+      - name: Install Insomnia CLI
+        if: steps.cache-inso.outputs.cache-hit != 'true'
+        run: |
+          mkdir -p /tmp/inso
+          curl -sL https://github.com/Kong/insomnia/releases/download/core%4012.1.0/inso-linux-x64-12.1.0.tar.xz -o inso.tar.xz
+          tar -xf inso.tar.xz -C /tmp/inso
+          chmod +x /tmp/inso/inso
+      
+      - name: Wait for FHIR server to be ready
+        run: |
+          echo "⏳ Waiting for FHIR server to start..."
+          timeout 120 bash -c 'until curl -sf http://localhost:8080/fhir/metadata > /dev/null; do sleep 2; done'
+          echo "✅ FHIR server is ready!"
+      
+      - name: Run API Tests
+        run: |
+          echo "🧪 Running FHIR API test collection..."
+          chmod +x /tmp/inso/inso
+          export PATH="/tmp/inso:$PATH"
+          
+          inso run test "FHIR API for Patient, Observation, Encounter, Condition, and Medication (Smile CDR Compatible) 1.0.1-wrk_8482e43ebd4e4c63923f4f78a48863ce.yaml" \
+            --env "Base Environment" \
+            --ct/hapi:latest
         ports:
           - 8080:8080
         env:
