--- a/.github/workflows/api-governance.yml
+++ b/.github/workflows/api-governance.yml
@@ -205,6 +205,7 @@ jobs:
           # Run tests with Insomnia CLI and capture output
           set +e
           inso run collection "FHIR API for Patient, Observation, Encounter, Condition, and Medication (Smile CDR Compatible) 1.0.1" \
+            -w "FHIR API for Patient, Observation, Encounter, Condition, and Medication (Smile CDR Compatible) 1.0.1-wrk_8482e43ebd4e4c63923f4f78a48863ce.yaml" \
             -e Dev \
             --bail 2>&1 | tee "$TEST_OUTPUT"
           TEST_EXIT_CODE=$?
