Update FHIR API test configuration for HTTPS and ngrok host

--- a/FHIR API for Patient, Observation, Encounter, Condition, and Medication (Smile CDR Compatible) 1.0.1-wrk_8482e43ebd4e4c63923f4f78a48863ce.yaml
+++ b/FHIR API for Patient, Observation, Encounter, Condition, and Medication (Smile CDR Compatible) 1.0.1-wrk_8482e43ebd4e4c63923f4f78a48863ce.yaml
@@ -671,9 +671,9 @@ environments:
         isPrivate: false
         sortKey: 1767670610173
       data:
-        scheme: http
+        scheme: https
         base_path: /fhir
-        host: localhost:8080
+        host: asia-bosker-renna.ngrok-free.dev
         xApiKey: xApiKey
         oauth2ClientId: clientId
         oauth2RedirectUrl: http://localhost/
@@ -687,9 +687,9 @@ environments:
         isPrivate: false
         sortKey: 1767816359228
       data:
-        scheme: http
+        scheme: https
         base_path: /fhir
-        host: localhost:8080
+        host: asia-bosker-renna.ngrok-free.dev
         xApiKey: xApiKey
         oauth2ClientId: clientId
         oauth2RedirectUrl: http://localhost/
