--- a/.github/workflows/api-governance.yml
+++ b/.github/workflows/api-governance.yml
@@ -206,7 +206,8 @@ jobs:
           set +e
           inso run collection "FHIR API for Patient, Observation, Encounter, Condition, and Medication (Smile CDR Compatible) 1.0.1" \
             -w "FHIR API for Patient, Observation, Encounter, Condition, and Medication (Smile CDR Compatible) 1.0.1-wrk_8482e43ebd4e4c63923f4f78a48863ce.yaml" \
-            -e Dev \
+            -e "OpenAPI env localhost:8080" \
+            --disableCertValidation \
             --bail 2>&1 | tee "$TEST_OUTPUT"
           TEST_EXIT_CODE=$?
           set -e
